# t9-spelling

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  t9spelling.hpp
test/: main.test.cpp
